fix photo problem

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header_sec_cont">
         <nav class="navbar">
             <ul class="navbar_list">
-                <img src="/img/List.png" alt="">
+                <img src="img/List.png" alt="">
                 <li>Çözüm ve Hizmetler</li>
                 <li>Ürünler</li>
                 <li>Teknolojiler</li>
@@ -42,32 +42,32 @@
         </div>
         <div class="feature_cont">
             <div>
-                <img src="/img/Döküman Analizi.png" alt="">
+                <img src="img/Döküman Analizi.png" alt="">
                 <h3>Döküman Analizi</h3>
                 <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
             </div>
             <div>
-                <img src="/img/Kabul ve Değerlendirme.png" alt="">
+                <img src="img/Kabul ve Değerlendirme.png" alt="">
                 <h3>Kabul ve Değerlendirme</h3>
                 <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
             </div>
             <div>
-                <img src="/img/İş Kuralları Analizi.png" alt="">
+                <img src="img/İş Kuralları Analizi.png" alt="">
                 <h3>İş Kuralları Analizi</h3>
                 <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
             </div>
             <div>
-                <img src="/img/Akış Diyagramları.png" alt="">
+                <img src="img/Akış Diyagramları.png" alt="">
                 <h3>Akış Diyagramları</h3>
                 <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
             </div>
             <div>
-                <img src="/img/Paydaş Analizi.png" alt="">
+                <img src="img/Paydaş Analizi.png" alt="">
                 <h3>Paydaş Analizi</h3>
                 <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
             </div>
             <div>
-                <img src="/img/Prototipleme.png" alt="">
+                <img src="img/Prototipleme.png" alt="">
                 <h3>Prototipleme</h3>
                 <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
             </div>
