navbar add burger

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
     <div class="header_sec_cont">
@@ -24,11 +26,11 @@
                 <li style="text-align:right;">
                     <span class="x_icon" onclick="mobileMenuToggle()">&#10005;</span>
                 </li>
-                <li>Çözüm ve Hizmetler</li>
-                <li>Ürünler</li>
-                <li>Teknolojiler</li>
-                <li>İnsan Kaynakları</li>
-                <li>Kurumsal</li>
+                <li><i class="fa-solid fa-handshake"></i> Çözüm ve Hizmetler</li>
+                <li><i class="fa-solid fa-box-open"></i> Ürünler</li>
+                <li><i class="fa-solid fa-microchip"></i> Teknolojiler</li>
+                <li><i class="fa-solid fa-users"></i> İnsan Kaynakları</li>
+                <li><i class="fa-solid fa-building"></i> Kurumsal</li>
             </ul>
         </nav>
         <div class="header_text_cont">
